--- a/src/app/dashboard/orders/orders-history/orders-history.component.html
+++ b/src/app/dashboard/orders/orders-history/orders-history.component.html
@@ -1,3 +1,226 @@
-<p>
-  orders-history works!
-</p>
+<table class="table widget__table">
+  <thead>
+  <tr>
+    <th class="table__cell-head table__cell-head--tal">Order id</th>
+    <th class="table__cell-head table__cell-head--tal">
+      <svg class="table__cell-head-arr" width="6" height="8" viewBox="0 0 6 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M5.86338 3.74894C6.06488 3.99981 6.04068 4.38035 5.80935 4.59887L3.37001 7.84701L3.36491 7.85187C3.16243 8.04303 2.86838 8.04686 2.66309 7.87675C2.6518 7.86737 2.64073 7.85746 2.62999 7.84701L0.190654 4.59887C-0.0406818 4.38035 -0.0648789 3.99981 0.136618 3.74894C0.338115 3.49806 0.689025 3.47182 0.92047 3.69031L2.44455 6.07412L2.44455 0.602408C2.44455 0.269701 2.69325 0 3.00011 0C3.30697 0 3.55566 0.269701 3.55566 0.602408L3.55566 6.07391L5.07953 3.69031C5.31097 3.47182 5.66188 3.49806 5.86338 3.74894Z"/>
+      </svg>
+      Created
+    </th>
+    <th class="table__cell-head table__cell-head--tal">Order</th>
+    <th class="table__cell-head table__cell-head--tal">Type</th>
+    <th class="table__cell-head table__cell-head--tal">Average Price</th>
+    <th class="table__cell-head table__cell-head--tal">Amount</th>
+    <th class="table__cell-head table__cell-head--tal">Fee</th>
+    <th class="table__cell-head table__cell-head--tal">Total</th>
+  </tr>
+  </thead>
+  <tbody class="table__body table__body--none-shadow">
+  <tr class="table__row">
+    <td class="table__cell">
+      <span>234566113434</span>
+    </td>
+    <td class="table__cell">
+      <div class="table__date-time">
+        <div>Th 13.06.2018</div>
+        <div>10:59:41</div>
+      </div>
+    </td>
+    <td class="table__cell">
+      <span>Buy</span>
+    </td>
+    <td class="table__cell">
+      <span>Limit</span>
+    </td>
+    <td class="table__cell">
+      <span>4500 USD</span>
+    </td>
+    <td class="table__cell">
+      <span>0.005 BTC</span>
+    </td>
+    <td class="table__cell txt-grey">
+      <span>0.02%</span> ~ <span>0.9 USD</span>
+    </td>
+    <td class="table__cell">
+      <span>6000 USD</span>
+    </td>
+  </tr>
+  <tr class="table__row">
+    <td class="table__cell">
+      <span>234566113434</span>
+    </td>
+    <td class="table__cell">
+      <div class="table__date-time">
+        <div>Th 13.06.2018</div>
+        <div>10:59:41</div>
+      </div>
+    </td>
+    <td class="table__cell">
+      <span>Buy</span>
+    </td>
+    <td class="table__cell">
+      <span>Limit</span>
+    </td>
+    <td class="table__cell">
+      <span>4500 USD</span>
+    </td>
+    <td class="table__cell">
+      <span>0.005 BTC</span>
+    </td>
+    <td class="table__cell txt-grey">
+      <span>0.02%</span> ~ <span>0.9 USD</span>
+    </td>
+    <td class="table__cell">
+      <span>6000 USD</span>
+    </td>
+  </tr>
+  <tr class="table__row">
+    <td class="table__cell">
+      <span>234566113434</span>
+    </td>
+    <td class="table__cell">
+      <div class="table__date-time">
+        <div>Th 13.06.2018</div>
+        <div>10:59:41</div>
+      </div>
+    </td>
+    <td class="table__cell">
+      <span>Buy</span>
+    </td>
+    <td class="table__cell">
+      <span>Limit</span>
+    </td>
+    <td class="table__cell">
+      <span>4500 USD</span>
+    </td>
+    <td class="table__cell">
+      <span>0.005 BTC</span>
+    </td>
+    <td class="table__cell txt-grey">
+      <span>0.02%</span> ~ <span>0.9 USD</span>
+    </td>
+    <td class="table__cell">
+      <span>6000 USD</span>
+    </td>
+  </tr>
+  <tr class="table__row">
+    <td class="table__cell">
+      <span>234566113434</span>
+    </td>
+    <td class="table__cell">
+      <div class="table__date-time">
+        <div>Th 13.06.2018</div>
+        <div>10:59:41</div>
+      </div>
+    </td>
+    <td class="table__cell">
+      <span>Buy</span>
+    </td>
+    <td class="table__cell">
+      <span>Limit</span>
+    </td>
+    <td class="table__cell">
+      <span>4500 USD</span>
+    </td>
+    <td class="table__cell">
+      <span>0.005 BTC</span>
+    </td>
+    <td class="table__cell txt-grey">
+      <span>0.02%</span> ~ <span>0.9 USD</span>
+    </td>
+    <td class="table__cell">
+      <span>6000 USD</span>
+    </td>
+  </tr>
+  <tr class="table__row">
+    <td class="table__cell">
+      <span>234566113434</span>
+    </td>
+    <td class="table__cell">
+      <div class="table__date-time">
+        <div>Th 13.06.2018</div>
+        <div>10:59:41</div>
+      </div>
+    </td>
+    <td class="table__cell">
+      <span>Buy</span>
+    </td>
+    <td class="table__cell">
+      <span>Limit</span>
+    </td>
+    <td class="table__cell">
+      <span>4500 USD</span>
+    </td>
+    <td class="table__cell">
+      <span>0.005 BTC</span>
+    </td>
+    <td class="table__cell txt-grey">
+      <span>0.02%</span> ~ <span>0.9 USD</span>
+    </td>
+    <td class="table__cell">
+      <span>6000 USD</span>
+    </td>
+  </tr>
+  <tr class="table__row">
+    <td class="table__cell">
+      <span>234566113434</span>
+    </td>
+    <td class="table__cell">
+      <div class="table__date-time">
+        <div>Th 13.06.2018</div>
+        <div>10:59:41</div>
+      </div>
+    </td>
+    <td class="table__cell">
+      <span>Buy</span>
+    </td>
+    <td class="table__cell">
+      <span>Limit</span>
+    </td>
+    <td class="table__cell">
+      <span>4500 USD</span>
+    </td>
+    <td class="table__cell">
+      <span>0.005 BTC</span>
+    </td>
+    <td class="table__cell txt-grey">
+      <span>0.02%</span> ~ <span>0.9 USD</span>
+    </td>
+    <td class="table__cell">
+      <span>6000 USD</span>
+    </td>
+  </tr>
+
+  </tbody>
+</table>
+<div class="row" style="margin: 0 16px;">
+  <ul class="paginator" style="margin-left: auto;">
+    <li class="paginator__item">
+      <a class="paginator__link paginator__link--arr" href="#">
+        <img class="paginator__arr-prev" src="../../assets/img/paginator-prev.svg" alt="prev">
+      </a>
+    </li>
+    <li class="paginator__item">
+      <a class="paginator__link" href="#">1</a>
+    </li>
+    <li class="paginator__item">
+      <a class="paginator__link" href="#">3</a>
+    </li>
+    <li class="paginator__item">
+      <a class="paginator__link" href="#">4</a>
+    </li>
+    <li class="paginator__item">
+      <a class="paginator__link" href="#">...</a>
+    </li>
+    <li class="paginator__item">
+      <a class="paginator__link" href="#">8</a>
+    </li>
+    <li class="paginator__item">
+      <a class="paginator__link paginator__link--arr" href="#">
+        <img class="paginator__arr-next" src="../../assets/img/paginator-next.svg" alt="next">
+      </a>
+    </li>
+  </ul>
+</div>
