--- a/src/app/dashboard/chat/chat.component.html
+++ b/src/app/dashboard/chat/chat.component.html
@@ -64,89 +64,100 @@
   </div>
   <div class="widget__content widget__content--show-all">
     <div class="widget__chat-wrap">
-      <div class="widget__message-wrap widget__message-wrap--left">
+      <div class="widget__message-wrap widget__message-wrap--left" *ngFor="let message of simpleChatItems">
         <div class="widget__message-icon">
           <img src="../../assets/img/chat-icon1.svg" alt="">
         </div>
         <div class="widget__message">
-          <div class="widget__message-nickname">yourFavorite_nIckname</div>
-          <p class="widget__message-text">every one yelling their coin bro.. what irritatae?</p>
+          <div class="widget__message-nickname">{{ message.email }}</div>
+          <p class="widget__message-text">{{ message.body }}</p>
         </div>
-        <div class="widget__message-time">10:32</div>
+        <div class="widget__message-time">{{ message.messageTime }}</div>
       </div>
-      <div class="widget__message-wrap widget__message-wrap--left">
-        <div class="widget__message-icon">
-          <img src="../../assets/img/chat-icon1.svg" alt="">
-        </div>
-        <div class="widget__message">
-          <div class="widget__message-nickname widget__message-nickname--hide">yourFavorite_nIckname</div>
-          <p class="widget__message-text">you are</p>
-        </div>
-        <div class="widget__message-time">10:32</div>
-      </div>
-      <div class="widget__message-wrap widget__message-wrap--left">
-        <div class="widget__message-icon">
-          <img src="" alt="">
-          <span>T</span>
-        </div>
-        <div class="widget__message">
-          <div class="widget__message-nickname">Tamb221</div>
-          <p class="widget__message-text">it's too soon to say it as scam guys</p>
-        </div>
-        <div class="widget__message-time">10:32</div>
-      </div>
-      <div class="widget__message-wrap widget__message-wrap--left">
-        <div class="widget__message-icon">
-          <img src="" alt="">
-          <span>R</span>
-        </div>
-        <div class="widget__message">
-          <div class="widget__message-nickname">rena19</div>
-          <p class="widget__message-text">haha.. save us?..</p>
-        </div>
-        <div class="widget__message-time">10:32</div>
-      </div>
-      <div class="widget__message-wrap widget__message-wrap--left">
-        <div class="widget__message-icon">
-          <img src="" alt="">
-          <span>R</span>
-        </div>
-        <div class="widget__message">
-          <div class="widget__message-nickname widget__message-nickname--hide">rena19</div>
-          <p class="widget__message-text">jadi, tradingnya di pair b2g-btc saja kalok mau cepat liquid</p>
-        </div>
-        <div class="widget__message-time">10:32</div>
-      </div>
-      <div class="widget__message-day">
-        <span>24</span> of <span>july</span>
-      </div>
-      <div class="widget__message-wrap widget__message-wrap--right">
-        <div class="widget__message">
-          <div class="widget__message-nickname">Igor</div>
-          <p class="widget__message-text">it's too soon to say it as scam guys</p>
-        </div>
-        <div class="widget__message-icon">
-          <img src="" alt="">
-          <span>I</span>
-        </div>
-        <div class="widget__message-time">10:32</div>
-      </div>
-      <div class="widget__message-wrap widget__message-wrap--right">
-        <div class="widget__message">
-          <div class="widget__message-nickname"></div>
-          <p class="widget__message-text">it's too soon to say it as scam guys</p>
-        </div>
-        <div class="widget__message-icon">
-          <img src="" alt="">
-          <span>I</span>
-        </div>
-        <div class="widget__message-time">10:32</div>
-      </div>
+
+      <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;left">-->
+        <!--<div class="widget__message-icon">-->
+          <!--<img src="../../assets/img/chat-icon1.svg" alt="">-->
+        <!--</div>-->
+        <!--<div class="widget__message">-->
+          <!--<div class="widget__message-nickname">yourFavorite_nIckname</div>-->
+          <!--<p class="widget__message-text">every one yelling their coin bro.. what irritatae?</p>-->
+        <!--</div>-->
+        <!--<div class="widget__message-time">10:32</div>-->
+      <!--</div>-->
+      <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;left">-->
+        <!--<div class="widget__message-icon">-->
+          <!--<img src="../../assets/img/chat-icon1.svg" alt="">-->
+        <!--</div>-->
+        <!--<div class="widget__message">-->
+          <!--<div class="widget__message-nickname widget__message-nickname&#45;&#45;hide">yourFavorite_nIckname</div>-->
+          <!--<p class="widget__message-text">you are</p>-->
+        <!--</div>-->
+        <!--<div class="widget__message-time">10:32</div>-->
+      <!--</div>-->
+      <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;left">-->
+        <!--<div class="widget__message-icon">-->
+          <!--<img src="" alt="">-->
+          <!--<span>T</span>-->
+        <!--</div>-->
+        <!--<div class="widget__message">-->
+          <!--<div class="widget__message-nickname">Tamb221</div>-->
+          <!--<p class="widget__message-text">it's too soon to say it as scam guys</p>-->
+        <!--</div>-->
+        <!--<div class="widget__message-time">10:32</div>-->
+      <!--</div>-->
+      <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;left">-->
+        <!--<div class="widget__message-icon">-->
+          <!--<img src="" alt="">-->
+          <!--<span>R</span>-->
+        <!--</div>-->
+        <!--<div class="widget__message">-->
+          <!--<div class="widget__message-nickname">rena19</div>-->
+          <!--<p class="widget__message-text">haha.. save us?..</p>-->
+        <!--</div>-->
+        <!--<div class="widget__message-time">10:32</div>-->
+      <!--</div>-->
+      <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;left">-->
+        <!--<div class="widget__message-icon">-->
+          <!--<img src="" alt="">-->
+          <!--<span>R</span>-->
+        <!--</div>-->
+        <!--<div class="widget__message">-->
+          <!--<div class="widget__message-nickname widget__message-nickname&#45;&#45;hide">rena19</div>-->
+          <!--<p class="widget__message-text">jadi, tradingnya di pair b2g-btc saja kalok mau cepat liquid</p>-->
+        <!--</div>-->
+        <!--<div class="widget__message-time">10:32</div>-->
+      <!--</div>-->
+      <!--<div class="widget__message-day">-->
+        <!--<span>24</span> of <span>july</span>-->
+      <!--</div>-->
+      <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;right">-->
+        <!--<div class="widget__message">-->
+          <!--<div class="widget__message-nickname">Igor</div>-->
+          <!--<p class="widget__message-text">it's too soon to say it as scam guys</p>-->
+        <!--</div>-->
+        <!--<div class="widget__message-icon">-->
+          <!--<img src="" alt="">-->
+          <!--<span>I</span>-->
+        <!--</div>-->
+        <!--<div class="widget__message-time">10:32</div>-->
+      <!--</div>-->
+      <!--<div class="widget__message-wrap widget__message-wrap&#45;&#45;right">-->
+        <!--<div class="widget__message">-->
+          <!--<div class="widget__message-nickname"></div>-->
+          <!--<p class="widget__message-text">it's too soon to say it as scam guys</p>-->
+        <!--</div>-->
+        <!--<div class="widget__message-icon">-->
+          <!--<img src="" alt="">-->
+          <!--<span>I</span>-->
+        <!--</div>-->
+        <!--<div class="widget__message-time">10:32</div>-->
+      <!--</div>-->
     </div>
     <div class="widget__send-message">
       <input class="widget__send-input"  type="text" required="" placeholder="Text your message here">
       <span class="widget__input-img widget__input-img--hide-mob widget__input-img--second-icon"><img src="../../assets/img/smiley.svg"></span>
-      <span class="widget__input-img"><img src="../../assets/img/send-message.svg"></span>
+      <span class="widget__input-img" (click)="onSendChatMessage('test message')"><img src="../../assets/img/send-message.svg"></span>
     </div>
     <div class="widget__scroll">
       <span class="widget__scroll-inner"></span>
