--- a/src/assets/scss/pages/_referral.scss
+++ b/src/assets/scss/pages/_referral.scss
@@ -10,12 +10,6 @@
 }
 
 /*--- media start ---*/
-@media (min-width: 600px) {
-}
-
-@media (min-width: 900px) {
-}
-
 @media (min-width: 1200px) {
   .referral {
     display: block;
@@ -145,6 +139,110 @@
         }
       }
     }
+    //structure start
+    &__structure{
+      display: flex;
+      margin-top: 24px;
+    }
+    &__structure-table{
+      width: auto;
+    }
+    .ref-copy{
+      margin-left: 8px;
+      &:hover{
+        cursor: pointer;
+      }
+      svg{
+        stroke: $darker-blue;
+      }
+    }
+    &__create-structure{
+      flex-grow: 1;
+      margin-left: 40px;
+    }
+    &__structure-title{
+      margin-bottom: 20px;
+    }
+    &__structure-input{
+      margin-right: 32px;
+    }
+    //structure end
+    //steps start
+    &__steps-block{
+      margin-top: 64px;
+    }
+    &__steps-title{
+      margin-bottom: 20px;
+    }
+    &__steps-wrap{
+      display: flex;
+      justify-content: space-between;
+    }
+    &__step{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      max-width: 240px;
+      padding: 24px 16px 4px;
+      &--card{
+        max-width: 200px;
+        box-shadow: 0 0 14px rgba(0, 0, 0, 0.2);
+      }
+    }
+    &__step-img{
+      margin-bottom: 16px;
+      svg{
+        fill:$darker-blue;
+      }
+    }
+    &__step-circle{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      border-radius: 50%;
+      width: 140px;
+      height: 140px;
+      margin-bottom: 16px;
+      box-shadow: 0 0 14px rgba(0, 0, 0, 0.2);
+      font-size: 48px;
+      &--blue{
+        background-color: $darker-blue;
+      }
+      span{
+        font-size: 26px;
+      }
+    }
+    &__step-title{
+      font-size: 18px;
+      line-height: 27px;
+      text-align: center;
+    }
+    &__step-subtitle{
+      font-size: 14px;
+      line-height: 21px;
+      text-align: center;
+      color:$darker-blue;
+      margin-top: 16px;
+    }
+    &__step-number{
+      font-size: 48px;
+      line-height: 56px;
+      color:$darker-blue;
+    }
+    &__step-arr{
+      margin-top: 68px;
+      &--asc{
+        margin-top: 0;
+        align-self: center;
+      }
+      svg{
+        stroke:$darker-white;
+      }
+    }
+    //step end
     /*--- elements end ---*/
   }
   .summary-popup {
@@ -222,7 +320,18 @@
 /*--- DARK THEME START---*/
 .dark-theme {
   .referral {
-
+    &__step-subtitle{
+      color:$light-blue;
+    }
+    &__step-number{
+      color:$light-blue;
+    }
+    &__step-arr{
+      svg{
+        stroke:$light-blue;
+        opacity: .3;
+      }
+    }
   }
 }
 
@@ -248,6 +357,11 @@
       &__people-icon {
         svg {
           fill: $light-blue;
+        }
+      }
+      .ref-copy{
+        svg{
+          stroke: $light-blue;
         }
       }
     }
