--- a/src/app/dashboard/components/order-book/order-book.component.html
+++ b/src/app/dashboard/components/order-book/order-book.component.html
@@ -121,7 +121,7 @@
         <img *ngIf="isExratePositive" class="arr arr--ml4" src="../assets/img/arr-up-green.svg">
         <img *ngIf="!isExratePositive" class="arr arr--ml4" src="../assets/img/arr-down-red.svg">
         <div class="hr"></div>
-        <span >{{lastSellBuyOrders.lastOrder.amountBase | number:'1.1-8' | replaceNumber}}</span>
+        <span >{{!+preLastExrate ? 0 : +preLastExrate | number:'1.1-8' | replaceNumber}}</span>
       </div>
 
       <!--<div class="separator" *ngIf="lastOrder">-->
@@ -264,11 +264,11 @@
       </div>
       <div class="separator" >
         <span *ngIf="maxExrate" [ngClass]="{'color-red': !isExratePositive, 'color-green': isExratePositive}">
-          {{!+lastExrate ? 0 : +lastExrate | replaceNumber}}</span>
+          {{!+lastExrate ? 0 : +lastExrate | number:'1.1-8' | replaceNumber}}</span>
         <img *ngIf="isExratePositive" class="arr arr--ml4" src="../assets/img/arr-up-green.svg">
         <img *ngIf="!isExratePositive" class="arr arr--ml4" src="../assets/img/arr-down-red.svg">
         <div class="hr"></div>
-        <span >{{lastSellBuyOrders.lastOrder.amountBase | number:'1.1-8' | replaceNumber}}</span>
+        <span >{{!+preLastExrate ? 0 : +preLastExrate | number:'1.1-8' | replaceNumber}}</span>
       </div>
       <div class="items mobile">
 
@@ -308,7 +308,7 @@
 
           <div class="total">
             <span>
-              {{item.amountBase | number:'1.1-8' | replaceNumber}}
+              {{item.amount | number:'1.1-8' | replaceNumber}}
             </span>
           </div>
         </div>
