--- a/src/app/dashboard/components/order-book/order-book.component.html
+++ b/src/app/dashboard/components/order-book/order-book.component.html
@@ -53,7 +53,8 @@
 
         <div class="visualization">
           <ng-container *ngFor="let item of dataForSell.reverse(); let i = index">
-            <div class="visual-item" [ngClass]="'red'" [style.width]="getPercentageOfTheMuxBuyOrSell(item.total, false) + '%'">
+            <div class="visual-item" [ngClass]="'red'" [style.width]="sellVisualizationArray[i] + '%'">
+            <!--<div class="visual-item" [ngClass]="'red'" [style.width]="getPercentageOfTheMuxBuyOrSell(item.total, false) + '%'">-->
               <div class="border-container" *ngIf="i < 7 && withForChartLineElements && withForChartLineElements.sell.length">
                 <div class="border-border sell" [style.width]="withForChartLineElements.sell[i]">
                 </div>
@@ -138,7 +139,8 @@
 
         <div class="visualization">
           <ng-container *ngFor="let item of dataBurBuy; let i = index">
-            <div class="visual-item" [ngClass]="'green'" [style.width]="getPercentageOfTheMuxBuyOrSell(item.total, true) + '%'">
+            <div class="visual-item" [ngClass]="'green'" [style.width]="buyVisualizationArray[i] + '%'">
+            <!--<div class="visual-item" [ngClass]="'green'" [style.width]="getPercentageOfTheMuxBuyOrSell(item.total, true) + '%'">-->
               <div class="border-container" *ngIf="i > 0 && withForChartLineElements && withForChartLineElements.buy.length">
                 <div class="border-border buy" [style.width]="withForChartLineElements.buy[i-1]">
 
@@ -224,7 +226,7 @@
 
         <div class="visualization">
           <ng-container *ngFor="let item of dataForSell; let i = index">
-            <div class="visual-item" [ngClass]="'red'" [style.width]="getPercentageOfTheMuxBuyOrSell(item.total, false) + '%'">
+            <div class="visual-item" [ngClass]="'red'" [style.width]="sellVisualizationArray[i] + '%'">
               <div class="border-container" *ngIf="i < 8 && withForChartLineElements && withForChartLineElements.sell.length">
                 <div class="border-border sell" [style.width]="withForChartLineElements.sell[i]">
                 </div>
@@ -274,7 +276,7 @@
 
         <div class="visualization">
           <ng-container *ngFor="let item of dataBurBuy; let i = index">
-            <div class="visual-item" [ngClass]="'green'" [style.width]="getPercentageOfTheMuxBuyOrSell(item.total, true) + '%'">
+            <div class="visual-item" [ngClass]="'green'" [style.width]="buyVisualizationArray[i] + '%'">
               <div class="border-container" *ngIf="i > 0 && withForChartLineElements && withForChartLineElements.buy.length">
                 <div class="border-border buy" [style.width]="withForChartLineElements.buy[i-1]">
 
