--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -131,7 +131,7 @@
       <a class="header__auth" (click)="onLogout()">Nickname</a>
     </div>
     <ng-template #reg>
-      <a class="header__auth" (click)="onLogin()">Registration</a>
+      <a class="header__auth" (click)="openRegistration()">Registration</a>
     </ng-template>
     <div *ngIf="isAuthenticated(); else alien">
       <a class="header__auth header__auth--log" (click)="onLogout()">Log out</a>
